lisp indentation now works in cells, but not hilighting

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -1,7 +1,8 @@
 {
  "metadata": {
+  "language": "commonlisp",
   "name": "",
-  "signature": "sha256:c4a18eb6d74ae1a4a21b72e250bc0bb5a244e6ba5bce1f40f55a2178617c22b9"
+  "signature": "sha256:0d74ec94a497cfeed8ea730daa1d18e271adea96523776b43b5c9d1906c2cba6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -196,9 +197,9 @@
      "collapsed": false,
      "input": [
       "(defun fibonacci (n)\n",
-      "   (if (<= n 1)\n",
-      "       1\n",
-      "       (+ (fibonacci (- n 2)) (fibonacci (- n 1)))))"
+      "    (if (<= n 1)\n",
+      "        1\n",
+      "        (+ (fibonacci (- n 2)) (fibonacci (- n 1)))))"
      ],
      "language": "python",
      "metadata": {},
@@ -206,13 +207,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "text": [
         "FIBONACCI"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -233,13 +234,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 4,
        "text": [
         "89"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -253,13 +254,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
         "(1 1 2 3 5 8 13 21 34 55)"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -375,14 +376,6 @@
      "source": [
       "To be continued ..."
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
