Clozure CL support added

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:a3affa8473b4fda3e174ea9fc0ee7f83a80320756791752961dfa725aa91915d"
+  "signature": "sha256:b78e0762570744e730a7fda5280027b68db3b067c2034d42638e2e9519c781bc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -136,7 +136,7 @@
        "stream": "stderr",
        "text": [
         "DIVISION-BY-ZERO: \n",
-        "  #<DIVISION-BY-ZERO {1005BDFB83}>\n"
+        "  #<DIVISION-BY-ZERO #x302001B3998D>\n"
        ]
       },
       {
@@ -287,8 +287,7 @@
        "output_type": "pyout",
        "prompt_number": 7,
        "text": [
-        "(3/2 5/3 8/5 13/8 21/13 34/21 55/34 89/55 144/89 233/144 377/233 610/377\n",
-        " 987/610 1597/987 2584/1597 4181/2584 6765/4181 10946/6765)"
+        "(3/2 5/3 8/5 13/8 21/13 34/21 55/34 89/55 144/89 233/144 377/233 610/377 987/610 1597/987 2584/1597 4181/2584 6765/4181 10946/6765)"
        ]
       }
      ],
@@ -317,9 +316,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "(1.5 1.6666666 1.6 1.625 1.6153846 1.6190476 1.617647 1.6181818 1.6179775\n",
-        " 1.6180556 1.6180258 1.6180371 1.6180328 1.6180345 1.6180338 1.618034 1.618034\n",
-        " 1.618034)"
+        "(1.5 1.6666666 1.6 1.625 1.6153846 1.6190476 1.617647 1.6181818 1.6179775 1.6180556 1.6180258 1.6180371 1.6180328 1.6180345 1.6180338 1.618034 1.618034 1.618034)"
        ]
       }
      ],
