prepare for rich display

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:b78e0762570744e730a7fda5280027b68db3b067c2034d42638e2e9519c781bc"
+  "signature": "sha256:30a57fd0c60c81247cb16cd5989f746f13d62d834df9ca0ded0b6991b8f49661"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -136,7 +136,7 @@
        "stream": "stderr",
        "text": [
         "DIVISION-BY-ZERO: \n",
-        "  #<DIVISION-BY-ZERO #x302001B3998D>\n"
+        "  #<DIVISION-BY-ZERO {1007988493}>\n"
        ]
       },
       {
@@ -254,13 +254,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 5,
        "text": [
         "(1 1 2 3 5 8 13 21 34 55)"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -314,13 +314,15 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 6,
        "text": [
-        "(1.5 1.6666666 1.6 1.625 1.6153846 1.6190476 1.617647 1.6181818 1.6179775 1.6180556 1.6180258 1.6180371 1.6180328 1.6180345 1.6180338 1.618034 1.618034 1.618034)"
+        "(1.5 1.6666666 1.6 1.625 1.6153846 1.6190476 1.617647 1.6181818 1.6179775\n",
+        " 1.6180556 1.6180258 1.6180371 1.6180328 1.6180345 1.6180338 1.618034 1.618034\n",
+        " 1.618034)"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -342,13 +344,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 7,
        "text": [
         "1.618034"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
