svg also with ccl

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:9e08db709166106b69f4db3eff14f09c2b692fbda916ccecee3946e16c99363f"
+  "signature": "sha256:6c250545b2d1b6f7a18ebcf99fd659397dd368fdd8aa304a7d93efd9fb344532"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -344,13 +344,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 2,
        "text": [
         "1.618034"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -395,7 +395,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "svg": [
         "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
         "<!-- Created with Inkscape (http://www.inkscape.org/) -->\n",
@@ -1116,11 +1116,11 @@
         "</svg>\n"
        ],
        "text": [
-        "#<SVG-STR {100687A763}>"
+        "#<SVG-STR #x302001D77EAD>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
