issue with latex escaping (in general backslash issue)

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:6c250545b2d1b6f7a18ebcf99fd659397dd368fdd8aa304a7d93efd9fb344532"
+  "signature": "sha256:effc8e16debe5c60c2d17427fbcb9fda2b486a9b11c551973e9bf9b15d2a323c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -380,7 +380,278 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The notebook provide rich display for textual and graphical data."
+      "The notebook provide rich display for textual and graphical data. The package `fishbowl-user` provides a few functions for producing displayable data in Lisp.\n",
+      "\n",
+      "By default, the Lisp backend works in the `fishbowl-user` package, which we can check right away:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "*package*"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "#<PACKAGE \"FISHBOWL-USER\">"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Customized plain text"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "By default, the data produced by the Lisp kernel is formatted as in `(format t \"~S\" <data>)`, i.e. roughly the same way the Lisp REPL works. The produced Lisp string is then encoded as a JSON string and sent back to the frontend(s).\n",
+      "\n",
+      "Let's see what happens with a string."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\"this is a string with a\n",
+      "new line\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "\"this is a string with a\n",
+        "new line\""
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Suppose now we would like to define a particular kind of string where new lines are replaced (in the shown output) by JSon new lines, i.e. the string `\"\\n\"`.\n",
+      "\n",
+      "The simplest way to do so is to create a CLOS class to encoded our special strings."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(defclass custom-string ()\n",
+      "    ((content :initarg :content :reader cstr-content)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "#<STANDARD-CLASS CUSTOM-STRING>"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(defun custom-string (str)\n",
+      "    (make-instance 'custom-string :content str))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "CUSTOM-STRING"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now, we have to specialize a generic method `render-plain` to produce our customized strings."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(defmethod render-plain ((str-obj custom-string))\n",
+      "    (let ((ncontent (make-array (length (cstr-content str-obj)) \n",
+      "                                :element-type 'character :fill-pointer 0 :adjustable t)))\n",
+      "        (loop for char across (cstr-content str-obj)\n",
+      "              for index from 0\n",
+      "              do (cond ((char= char #\\Newline)\n",
+      "                        (vector-push #\\\\ ncontent)\n",
+      "                        (vector-push #\\n ncontent))\n",
+      "                       (t (vector-push char ncontent))))\n",
+      "         (format nil \"~S\" ncontent)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "#<STANDARD-METHOD RENDER-PLAIN (CUSTOM-STRING) {100722DF63}>"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's try our customized strings ..."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(custom-string \"this is customized string with a\n",
+      " new line\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "\"this is customized string with a\\\\n new lin\""
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Programmatically-generated Latex"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Another common textual data displayed on notebooks is rich text encoded using the Markdown format. The same way we customized a plain representation, we can specialize the `render_markdown` for a specific use. However a `markdown` function is provided as a convenience."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(defun show-fraction (num den)\n",
+      "    (latex (format nil \"\\\\frac{~A}{~A}\" num den)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "REDEFINITION-WITH-DEFUN: \n",
+        "  #<SB-KERNEL:REDEFINITION-WITH-DEFUN {1005E49333}>\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "NIL"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(format nil \"\\\\frac{~A}{~A}\" 2 3)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "\"\\\\frac{2}{3}\""
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(show-fraction 1 18)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "latex": [
+        "$$frac{1}{18}$$"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "#<LATEX-TEXT {1005E9D473}>"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Vector images as SVG"
      ]
     },
     {
@@ -395,7 +666,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 14,
        "svg": [
         "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
         "<!-- Created with Inkscape (http://www.inkscape.org/) -->\n",
@@ -1116,11 +1387,27 @@
         "</svg>\n"
        ],
        "text": [
-        "#<SVG-STR #x302001D77EAD>"
+        "#<SVG-STR {1005FBC493}>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Bitmap images as PNG"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1129,6 +1416,14 @@
      "source": [
       "To be continued ..."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
