issue with string encoding

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -515,7 +515,7 @@
       "                        (vector-push #\\\\ ncontent)\n",
       "                        (vector-push #\\n ncontent))\n",
       "                       (t (vector-push char ncontent))))\n",
-      "         (format nil \"~S\" ncontent)))"
+      "         (format nil \"\\\"~A\\\"\" ncontent)))"
      ],
      "language": "python",
      "metadata": {},
@@ -523,13 +523,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 14,
        "text": [
-        "#<STANDARD-METHOD RENDER-PLAIN (CUSTOM-STRING) {100722DF63}>"
+        "#<STANDARD-METHOD RENDER-PLAIN (CUSTOM-STRING)>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -542,7 +542,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "(custom-string \"this is customized string with a\n",
+      "(custom-string \"this is a customized string with a\n",
       " new line\")"
      ],
      "language": "python",
@@ -551,13 +551,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 15,
        "text": [
-        "\"this is customized string with a\\\\n new lin\""
+        "\"this is a customized string with a\\n new lin\""
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 15
     },
     {
      "cell_type": "heading",
@@ -579,35 +579,27 @@
      "collapsed": false,
      "input": [
       "(defun show-fraction (num den)\n",
-      "    (latex (format nil \"\\\\frac{~A}{~A}\" num den)))"
+      "    (latex (encode-json-to-string(format nil \"\\\\frac{~A}{~A}\" num den))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "REDEFINITION-WITH-DEFUN: \n",
-        "  #<SB-KERNEL:REDEFINITION-WITH-DEFUN {1005E49333}>\n"
-       ]
-      },
-      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 23,
        "text": [
-        "NIL"
+        "SHOW-FRACTION"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "(format nil \"\\\\frac{~A}{~A}\" 2 3)"
+      "(format nil \"\\\"~A\\\"\" (format nil \"\\\\frac{~A}{~A}\" 2 3))"
      ],
      "language": "python",
      "metadata": {},
@@ -615,13 +607,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 26,
        "text": [
-        "\"\\\\frac{2}{3}\""
+        "\"\\\"\\\\frac{2}{3}\\\"\""
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -634,17 +626,17 @@
      "outputs": [
       {
        "latex": [
-        "$$frac{1}{18}$$"
+        "\"\\frac{1}{18}\""
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 25,
        "text": [
-        "#<LATEX-TEXT {1005E9D473}>"
+        "#<LATEX-TEXT #x302001BA5C9D>"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 25
     },
     {
      "cell_type": "heading",
