quicklisp hook (not needed ?)

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:368014903550b4083d56a756aacbe7c96720d346e1ca4eb42a7bf42521d574d0"
+  "signature": "sha256:9a6260e7d4ae4cbd50c292ea286df9c1f199d752466596d72b2fd4edb7f2a3c3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -736,54 +736,45 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 3,
        "text": [
         "(\"cl-markup\")"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "(cl-markup::markup\n",
-      " (:table :border 0 :cellpadding 4\n",
-      "         (loop for i below 25 by 5\n",
-      "               collect\n",
-      "               (markup\n",
-      "                 (:tr :align \"right\"\n",
-      "                      (loop for j from i below (+ i 5)\n",
-      "                            collect\n",
-      "                            (markup\n",
-      "                              (:td :bgcolor\n",
-      "                                   (if (oddp j)\n",
-      "                                       \"pink\"\n",
-      "                                       \"green\")\n",
-      "                                   (format nil \"~@R\" (1+ j))))))))))"
+      "(html (markup:markup\n",
+      "       (:table :border 0 :cellpadding 4\n",
+      "               (loop for i below 25 by 5\n",
+      "                     collect (markup:markup \n",
+      "                              (:tr :align \"right\"\n",
+      "                                   (loop for j from i below (+ i 5)\n",
+      "                                         collect (markup:markup\n",
+      "                                                  (:td :bgcolor\n",
+      "                                                       (if (oddp j) \"pink\" \"green\")\n",
+      "                                                       (format nil \"~@R\" (1+ j)))))))))))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "SIMPLE-STYLE-WARNING: \n",
-        "undefined function: MARKUP\n"
-       ]
-      },
-      {
+       "html": [
+        "<table border=\"0\" cellpadding=\"4\"><tr align=\"right\"><td bgcolor=\"green\">I</td><td bgcolor=\"pink\">II</td><td bgcolor=\"green\">III</td><td bgcolor=\"pink\">IV</td><td bgcolor=\"green\">V</td></tr><tr align=\"right\"><td bgcolor=\"pink\">VI</td><td bgcolor=\"green\">VII</td><td bgcolor=\"pink\">VIII</td><td bgcolor=\"green\">IX</td><td bgcolor=\"pink\">X</td></tr><tr align=\"right\"><td bgcolor=\"green\">XI</td><td bgcolor=\"pink\">XII</td><td bgcolor=\"green\">XIII</td><td bgcolor=\"pink\">XIV</td><td bgcolor=\"green\">XV</td></tr><tr align=\"right\"><td bgcolor=\"pink\">XVI</td><td bgcolor=\"green\">XVII</td><td bgcolor=\"pink\">XVIII</td><td bgcolor=\"green\">XIX</td><td bgcolor=\"pink\">XX</td></tr><tr align=\"right\"><td bgcolor=\"green\">XXI</td><td bgcolor=\"pink\">XXII</td><td bgcolor=\"green\">XXIII</td><td bgcolor=\"pink\">XXIV</td><td bgcolor=\"green\">XXV</td></tr></table>"
+       ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 7,
        "text": [
-        "NIL"
+        "#<HTML-TEXT {1006370D73}>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
