removed the quicklisp hook (not needed it seems)

--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:9a6260e7d4ae4cbd50c292ea286df9c1f199d752466596d72b2fd4edb7f2a3c3"
+  "signature": "sha256:b12fa9af674cdea2cdb05ed3fd2cdbba1ba800ae6fd7d5c94ab42c3b5e7ef44e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -373,6 +373,42 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "Multi-format document processing"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The internal representation of a notebook is a JSON document with a very simple structure. Hence, it is very easy to convert the notebook file to various representations.  This can be done at the JSON level but there are higher-level tools to ease such conversion."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "PDF document"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To generate a PDF document, the default is to simply use IPython's `nbconvert` tool :\n",
+      "\n",
+      "```\n",
+      "ipython3 nbconvert <myfile>.ipynb --to latex --post pdf\n",
+      "```\n",
+      "\n",
+      "This will generate a file `<myfile>.pdf` that is in general quite readable. The process is to generate first a `pandoc` markdown document from the JSon representation, and then relying `pandoc` to generate a Latex document that is finally processed by a `latex` tool (by default `pdflatex`) to generate the final document. A lot of machinery but this works remarkably well !  You can see for yourself with the `AboutFishbowl.pdf` document generated from the present notebook."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "Rich display"
      ]
     },
@@ -624,23 +660,15 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "REDEFINITION-WITH-DEFUN: \n",
-        "  #<SB-KERNEL:REDEFINITION-WITH-DEFUN {100794EF63}>\n"
-       ]
-      },
-      {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 1,
        "text": [
-        "NIL"
+        "SHOW-FRACTION"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -657,13 +685,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 2,
        "text": [
-        "#<LATEX-TEXT {10079A3A93}>"
+        "#<LATEX-TEXT {1007872643}>"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -768,13 +796,20 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 5,
        "text": [
-        "#<HTML-TEXT {1006370D73}>"
+        "#<HTML-TEXT {1005FC8D73}>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Remark that the table is *not* visible in the generated PDF. For non-textual content it is actually preferable to use images."
+     ]
     },
     {
      "cell_type": "heading",
