--- a/AboutFishbowl.ipynb
+++ b/AboutFishbowl.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "commonlisp",
   "name": "",
-  "signature": "sha256:b12fa9af674cdea2cdb05ed3fd2cdbba1ba800ae6fd7d5c94ab42c3b5e7ef44e"
+  "signature": "sha256:66dc808a8bd76abfaa64455c2e075635f64aeb67cce93adf07eb26889b396468"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -820,6 +820,191 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "There are two types of computerized representation for images: bitmap and vectorial. Nowadays, the popular format for vector images is **SVG** (\\emph{Scalable Vector Graphics}). If a few years back the support for svg images was quiet imperfect, modern browsers and tools have somewhat settled on how svg images should render.\n",
+      "\n",
+      "Basically a SVG is a W3C recommendation and is thus an XML-based format. The advantage is that the format is *open* (as opposed to *proprietary*)  not tied to a specific tools. Hence anyone can create a SVG image using a simple text editor.  Of course, Fishbowl and then the notebook can interpret this textual description as an image.\n",
+      "\n",
+      "Let's try ..."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(svg \"<svg height=\\\"400\\\" width=\\\"450\\\">\n",
+      "<path id=\\\"lineAB\\\" d=\\\"M 100 350 l 150 -300\\\" stroke=\\\"red\\\" stroke-width=\\\"3\\\" fill=\\\"none\\\" />\n",
+      "  <path id=\\\"lineBC\\\" d=\\\"M 250 50 l 150 300\\\" stroke=\\\"red\\\" stroke-width=\\\"3\\\" fill=\\\"none\\\" />\n",
+      "  <path d=\\\"M 175 200 l 150 0\\\" stroke=\\\"green\\\" stroke-width=\\\"3\\\" fill=\\\"none\\\" />\n",
+      "  <path d=\\\"M 100 350 q 150 -300 300 0\\\" stroke=\\\"blue\\\" stroke-width=\\\"5\\\" fill=\\\"none\\\" />\n",
+      "  <!-- Mark relevant points -->\n",
+      "  <g stroke=\\\"black\\\" stroke-width=\\\"3\\\" fill=\\\"black\\\">\n",
+      "    <circle id=\\\"pointA\\\" cx=\\\"100\\\" cy=\\\"350\\\" r=\\\"3\\\" />\n",
+      "    <circle id=\\\"pointB\\\" cx=\\\"250\\\" cy=\\\"50\\\" r=\\\"3\\\" />\n",
+      "    <circle id=\\\"pointC\\\" cx=\\\"400\\\" cy=\\\"350\\\" r=\\\"3\\\" />\n",
+      "  </g>\n",
+      "  <!-- Label the points -->\n",
+      "  <g font-size=\\\"30\\\" font=\\\"sans-serif\\\" fill=\\\"black\\\" stroke=\\\"none\\\" text-anchor=\\\"middle\\\">\n",
+      "    <text x=\\\"100\\\" y=\\\"350\\\" dx=\\\"-30\\\">A</text>\n",
+      "    <text x=\\\"250\\\" y=\\\"50\\\" dy=\\\"-10\\\">B</text>\n",
+      "    <text x=\\\"400\\\" y=\\\"350\\\" dx=\\\"30\\\">C</text>\n",
+      "  </g>\n",
+      "</svg>\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 5,
+       "svg": [
+        "<svg height=\"400\" width=\"450\">\n",
+        "<path id=\"lineAB\" d=\"M 100 350 l 150 -300\" stroke=\"red\" stroke-width=\"3\" fill=\"none\" />\n",
+        "  <path id=\"lineBC\" d=\"M 250 50 l 150 300\" stroke=\"red\" stroke-width=\"3\" fill=\"none\" />\n",
+        "  <path d=\"M 175 200 l 150 0\" stroke=\"green\" stroke-width=\"3\" fill=\"none\" />\n",
+        "  <path d=\"M 100 350 q 150 -300 300 0\" stroke=\"blue\" stroke-width=\"5\" fill=\"none\" />\n",
+        "  <!-- Mark relevant points -->\n",
+        "  <g stroke=\"black\" stroke-width=\"3\" fill=\"black\">\n",
+        "    <circle id=\"pointA\" cx=\"100\" cy=\"350\" r=\"3\" />\n",
+        "    <circle id=\"pointB\" cx=\"250\" cy=\"50\" r=\"3\" />\n",
+        "    <circle id=\"pointC\" cx=\"400\" cy=\"350\" r=\"3\" />\n",
+        "  </g>\n",
+        "  <!-- Label the points -->\n",
+        "  <g font-size=\"30\" font=\"sans-serif\" fill=\"black\" stroke=\"none\" text-anchor=\"middle\">\n",
+        "    <text x=\"100\" y=\"350\" dx=\"-30\">A</text>\n",
+        "    <text x=\"250\" y=\"50\" dy=\"-10\">B</text>\n",
+        "    <text x=\"400\" y=\"350\" dx=\"30\">C</text>\n",
+        "  </g>\n",
+        "</svg>"
+       ],
+       "text": [
+        "#<SVG-STR {1006ABA023}>"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Of course, it is quite cumbersome to write full pictures in a string encoding an xml document ! Pictures can be obtained more interesting in a programmatic manner, either building a string or relying on a third-party library.  This could be an XML library but there is also a nifty `cl-svg` library that we might use."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(ql:quickload \"cl-svg\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "To load \"cl-svg\":\n",
+        "  Load 1 ASDF system:\n",
+        "    cl-svg\n",
+        "\n",
+        "; Loading \"cl-svg\"\n",
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "(\"cl-svg\")"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(defparameter *scene* \n",
+      "    (let* ((scene (svg:make-svg-toplevel 'svg:svg-1.1-toplevel :height 200 :width 200))\n",
+      "           (lg1 (svg:make-linear-gradient scene (:id :generate\n",
+      "                                         :x1 \"0%\" :y1 \"0%\" :x2 \"100%\" :y2 \"100%\")\n",
+      "                (svg:stop :color \"green\" :offset \"0%\")\n",
+      "                (svg:stop :color \"blue\" :offset \"50%\")\n",
+      "                (svg:stop :color \"red\" :offset \"100%\"))))\n",
+      "     (svg:title scene \"SVG test: gradients\")\n",
+      "     (svg:draw scene (:rect :x 10 :y 10 :height 200 :width 200)\n",
+      "               :fill (svg:xlink-href lg1))\n",
+      "        scene))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 50,
+       "text": [
+        "*SCENE*"
+       ]
+      }
+     ],
+     "prompt_number": 50
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "(svg (with-output-to-string (out)\n",
+      "         (svg:stream-out out *scene*))))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 52,
+       "svg": [
+        "<?xml version=\"1.0\" standalone=\"no\"?>\n",
+        "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\" \n",
+        "  \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+        "<svg width=\"200\" height=\"200\" version=\"1.1\" id=\"toplevel\"\n",
+        "    xmlns=\"http://www.w3.org/2000/svg\"\n",
+        "    xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+        "  <defs>\n",
+        "    <linearGradient id=\"linearGradient1055\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"100%\">\n",
+        "      <stop stop-color=\"green\" stop-opacity=\"1.00\" offset=\"0%\"/>\n",
+        "      <stop stop-color=\"blue\" stop-opacity=\"1.00\" offset=\"50%\"/>\n",
+        "      <stop stop-color=\"red\" stop-opacity=\"1.00\" offset=\"100%\"/>\n",
+        "    </linearGradient>\n",
+        "  </defs>\n",
+        "  <title>\n",
+        "    SVG test: gradients\n",
+        "  </title>\n",
+        "  <rect x=\"10\" y=\"10\" height=\"200\" width=\"200\" fill=\"url(#linearGradient1055)\"/>\n",
+        "</svg>\n"
+       ],
+       "text": [
+        "#<SVG-STR {1006C02BE3}>"
+       ]
+      }
+     ],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Finally, it is perhaps easier to load a SVG picture directly from a file."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -831,7 +1016,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 53,
        "svg": [
         "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
         "<!-- Created with Inkscape (http://www.inkscape.org/) -->\n",
@@ -1552,11 +1737,11 @@
         "</svg>\n"
        ],
        "text": [
-        "#<SVG-STR {1007624F33}>"
+        "#<SVG-STR {1006C332E3}>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 53
     },
     {
      "cell_type": "heading",
